--- a/CookPopularControl/Themes/CheckBoxStyle.xaml
+++ b/CookPopularControl/Themes/CheckBoxStyle.xaml
@@ -9,10 +9,24 @@
 
     <Style x:Key="DefaultCheckBoxStyle" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxBaseStyle}">
         <Setter Property="pc:CheckBoxAssistant.FillBrush" Value="{DynamicResource PrimaryBackgroundBrush}" />
-        <Setter Property="pc:CheckBoxAssistant.FillThickness" Value="1" />
-        <Setter Property="pc:CheckBoxAssistant.FillType" Value="Check" />
-        <Setter Property="pc:CheckBoxAssistant.FillSize" Value="30" />
-        <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="1" />
+        <Setter Property="pc:CheckBoxAssistant.NullFillType" Value="Line" />
+        <Setter Property="pc:CheckBoxAssistant.BoxSize" Value="{Binding RelativeSource={RelativeSource Self},Path=Height}" />
+        <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="2" />
+    </Style>
+
+    <Style x:Key="CheckBoxCheckedNullLineStyle" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource DefaultCheckBoxStyle}">
+        <Setter Property="IsChecked" Value="{x:Null}" />
+        <Setter Property="pc:CheckBoxAssistant.NullFillType" Value="Line" />
+    </Style>
+
+    <Style x:Key="CheckBoxCheckedNullRectangleStyle" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxCheckedNullLineStyle}">
+        <Setter Property="pc:CheckBoxAssistant.FillBrush" Value="{DynamicResource PrimaryThemeBrush}" />
+        <Setter Property="pc:CheckBoxAssistant.NullFillType" Value="Rectangle" />
+        <Style.Triggers>
+            <Trigger Property="IsChecked" Value="True">
+                <Setter Property="pc:CheckBoxAssistant.FillBrush" Value="{DynamicResource PrimaryBackgroundBrush}" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
 </ResourceDictionary>
