--- a/MvvmTestDemo/DemoViews/TabControlDemo.xaml
+++ b/MvvmTestDemo/DemoViews/TabControlDemo.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
@@ -15,6 +16,7 @@
                         Background="{StaticResource BlockBrush}"
                         HorizontalAlignment="Left"
                         TabStripPlacement="Left"
+                        pc:TabControlAssistant.IsAddClearButton="False"
                         Style="{StaticResource DefaultTabControlStyle}">
                 <TabItem Header="First11111111111">第一个页面</TabItem>
                 <TabItem Header="Second">第二个页面</TabItem>
@@ -27,6 +29,18 @@
                         Background="{StaticResource BlockBrush}"
                         Margin="30,0"
                         HorizontalAlignment="Left"
+                        TabStripPlacement="Left"
+                        Style="{StaticResource DefaultTabControlStyle}">
+                <TabItem Header="First11111111111">第一个页面</TabItem>
+                <TabItem Header="Second">第二个页面</TabItem>
+                <TabItem Header="Third">第三个页面</TabItem>
+                <TabItem Header="Fourth">第四个页面</TabItem>
+            </TabControl>
+
+            <TabControl Width="300" Height="300"
+                        Foreground="#FFFFFF"
+                        Background="{StaticResource BlockBrush}"
+                        HorizontalAlignment="Left"
                         TabStripPlacement="Top"
                         Style="{StaticResource DefaultTabControlStyle}">
                 <TabItem Header="First">第一个页面</TabItem>
@@ -38,7 +52,7 @@
             <TabControl Width="300" Height="300"
                         Foreground="#FFFFFF"
                         Background="{StaticResource BlockBrush}"
-                        Margin="0,0,30,0"
+                        Margin="30,0"
                         HorizontalAlignment="Left"
                         TabStripPlacement="Right"
                         Style="{StaticResource DefaultTabControlStyle}">
